# EazziDoc

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  docker-compose.monitoring.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_audit_logs_and_payments.py  0003_doctor_credentials.py  0004_patient_identity_verification.py  0005_diagnosis_doctor_fields.py  0006_password_reset_tokens.py
backend/app/: main.py
backend/app/api/v1/: admin.py  appointments.py  auth.py  diagnoses.py  gdpr.py  messaging.py  patients.py  payments.py  router.py  support.py  uploads.py
backend/app/core/: celery_app.py  config.py  database.py  dependencies.py  limiter.py  logging.py  metrics.py  security.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  appointment.py  audit_log.py  diagnosis.py  doctor.py  password_reset_token.py  patient.py  payment.py  refresh_token.py  user.py
backend/app/schemas/: admin.py  appointment.py  auth.py  diagnosis.py  patient.py  payment.py  upload.py
backend/app/services/: audit.py  email.py  payments.py  storage.py
backend/app/services/ai/: chest_xray.py  gemini.py  groq_client.py  medsam.py  retina.py  router.py  skin.py  tiny_vit_sam.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_admin.py  test_appointments.py  test_audit_log.py  test_auth.py  test_diagnoses.py  test_gdpr.py  test_health.py  test_payments.py  test_profiles.py  test_rate_limits.py  test_security.py  test_uploads.py
backend/app/tests/unit/: test_health.py
backend/app/workers/: polling.py  tasks.py
docs/: ROADMAP.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(admin-portal)/: layout.tsx
frontend/app/(admin-portal)/admin/login/: page.tsx
frontend/app/(admin-portal)/admin/register/: page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/forgot-password/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(auth)/reset-password/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/admin/: layout.tsx  page.tsx
frontend/app/(dashboard)/admin/audit-logs/: page.tsx
frontend/app/(dashboard)/admin/diagnoses/: page.tsx
frontend/app/(dashboard)/admin/doctors/: page.tsx
frontend/app/(dashboard)/admin/queue/: page.tsx
frontend/app/(dashboard)/admin/users/: page.tsx
frontend/app/(dashboard)/doctor/: page.tsx
frontend/app/(dashboard)/doctor/appointments/: page.tsx
frontend/app/(dashboard)/doctor/patients/: page.tsx
frontend/app/(dashboard)/patient/: page.tsx
frontend/components/: ModalitySelector.tsx  SupportedModalities.tsx
frontend/components/nav/: sidebar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  confirm-dialog.tsx  input.tsx  theme-toggle.tsx
frontend/lib/: api.ts  auth-context.tsx  types.ts  utils.ts
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: eazzidoc.json
monitoring/grafana/provisioning/dashboards/: provider.yml
(+15 files in other folders)
