[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eazzidoc-backend"
version = "0.1.0"
description = "EazziDoc AI-powered medical imaging diagnostic platform"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.31.1",
    "python-multipart==0.0.12",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.13.3",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",

    # Storage
    "boto3==1.35.0",

    # AI — report generation (lightweight, just HTTP clients)
    "groq==0.11.0",
    "google-generativeai==0.8.3",

    # Task queue
    "celery[redis]==5.4.0",

    # PDF generation
    "reportlab==4.2.5",

    # Validation / settings
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.5.2",

    # Rate limiting
    "slowapi==0.1.9",

    # Logging
    "structlog==24.4.0",

    # Email
    "resend>=2.0.0",

    # Monitoring
    "sentry-sdk[fastapi]==2.17.0",

    # Payments
    "stripe>=5.0.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "prometheus-client==0.21.0",
]

[project.optional-dependencies]
# ml: heavy vision dependencies — installed in production and ML CI jobs only
ml = [
    "tensorflow==2.16.1",
    "keras==3.6.0",
    "tf-keras-vis==0.8.7",
    "opencv-python-headless==4.10.0.84",
    "pillow==10.4.0",
    "numpy==1.26.4",
    # ── hospital AI stack ─────────────────────────────────────────────────────
    # Chest X-ray: TorchXRayVision (MIT) — runs in-process on CPU
    # Install CPU-only torch to save ~700 MB vs CUDA build:
    #   pip install torch --index-url https://download.pytorch.org/whl/cpu
    # pyproject.toml cannot specify the index URL, so handle this in Dockerfile.worker.
    "torchxrayvision",
    "scikit-image",
    # Skin + Retina: served via HuggingFace Inference API — no local model weights needed.
    # MedSAM segmentation overlay: segment-anything (Apache 2.0)
    # Checkpoint must be downloaded separately — set MEDSAM_CHECKPOINT_PATH env var.
    # Do NOT include the checkpoint file in the Docker image.
    # See: https://github.com/bowang-lab/MedSAM
    "segment-anything",
]

# prod: adds gunicorn for multi-worker production serving
prod = [
    "gunicorn==23.0.0",
    "eazzidoc-backend[ml]",
]

# prod-no-ml: prod without heavy vision deps — use this for local dev builds
prod-no-ml = [
    "gunicorn==23.0.0",
]

dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "anyio==4.6.0",
    "bandit==1.7.10",
    "ruff==0.7.0",
    "pre-commit==3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501: line length handled by formatter
# F821: false positives on SQLAlchemy string forward references ("Patient", "Doctor", etc.)
ignore = ["E501", "F821"]

[tool.bandit]
exclude_dirs = ["app/tests"]
skips = ["B101"]
